--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
-security:
- ignored: /console/**
+security.ignored: /console/**
 
 spring.h2.console:
   enabled: true
-  path: /console/**
+  path: /console
