--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
         </dependency>
@@ -42,13 +47,14 @@
         <dependency>
             <groupId>com.github.kstyrc</groupId>
             <artifactId>embedded-redis</artifactId>
-            <version>0.6</version>
+            <version>${embedded-redis.version}</version>
         </dependency>
 
     </dependencies>
 
     <properties>
         <java.version>1.8</java.version>
+        <embedded-redis.version>0.6</embedded-redis.version>
     </properties>
 
     <build>
